# jax-project-template

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/analysis/: dna_level_gen.yaml  dna_level_gen_metrics_only.yaml
configs/analysis/logs/: dna_guided_nca_metrics.yaml
configs/analysis/plots/: level_gen.yaml  mpe_repertoire.yaml
configs/experiment/: single_emoji_nca_bp.yaml  single_emoji_nca_evo.yaml
configs/model/: dna_guided_nca.yaml  dna_iid_sampler.yaml  graph_ae.yaml  nca.yaml  nca_dna_all_alive.yaml  nca_dna_pair.yaml
configs/task/: dna_qd.yaml  persistent_dna_qd.yaml  supervised.yaml
configs/trainer/strategy/: base.yaml
src/: utils.py
src/analysis/: dna.py  levelgen.py  qd.py  run_utils.py
src/analysis/utils/: graph.py  run.py  visualisation.py
src/dataset/: base.py  emoji.py
src/evo/: dummy_es.py  operators.py  qd.py  strategy.py  utils.py
src/model/: autoencoder.py  base.py  dev.py
src/nn/: attn.py  ca.py  embedding.py  graph.py  stochastic.py  transformer.py
src/optim/: base.py
src/problem/: base.py  levelgen.py  map_utils.py
src/task/: base.py  loss.py  supervised.py
src/trainer/: backprop.py  base.py  callback.py  evo.py  logger.py  progress_bar.py  utils.py
src/utils/: graph.py  matching.py  tree.py
test/: backprop_pipeline.py  callback_and_multiprocessing.py  graph_methods.py  supervised_pipeline.py
